--- a/index.html
+++ b/index.html
@@ -11,21 +11,9 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sg-developer-portal/doc-theme-default@0.0.13/public/dist/doc.css" />
 		<link rel="stylesheet" href="https://unpkg.com/@developerportalsg/docsify-plugin-toc@latest/dist/light.css" />
 		<link rel="stylesheet" href="https://unpkg.com/@developerportalsg/docsify-accordion-plugin@latest/dist/accordion.css" />
+		<link rel="stylesheet" href="/extra.css" />
 
-    <style>
-      .app-name-link img {
-        width: 75%;
-      }
-
-      .sidebar-nav ul li a {
-        word-wrap: break-word;
-        white-space: break-spaces;
-        line-height: 1.5;
-        margin-top: 12px;
-      }
-      
-    </style>
-
+  
 	</head>
 	<body>
 		<div id="app"></div>
