chore(sidebar): add default width

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<!-- Import for documentation portal styles -->
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sg-developer-portal/doc-theme-default@0.0.13/public/dist/doc.css" />
 		<link rel="stylesheet" href="https://unpkg.com/@developerportalsg/docsify-plugin-toc@latest/dist/light.css" />
-		<link rel="stylesheet" href="https://unpkg.com/@developerportalsg/docsify-accordion-plugin@latest/dist/accordion.css" />
+    <link rel="stylesheet" href="https://unpkg.com/@developerportalsg/docsify-accordion-plugin@latest/dist/accordion.css" />
 		<link rel="stylesheet" href="/extra.css" />
 
   
@@ -27,7 +27,6 @@
 			mermaid.initialize({ startOnLoad: false });
 
 			window.$docsify = {
-        logo: "./apex.png",
 				name: "APEX Cloud Documentations", // Must configure when publishing
 				hideSidebar: false, // Configurable when publishing
 				basePath: "", // Configurable when publishing
@@ -35,6 +34,7 @@
 				el: "#app",
 				auto2top: true,
 				loadSidebar: true,
+        useSGDSAccordion: true,
 				subMaxLevel: 2, // For automatic 2nd level headings
 				enableSidebarCollapse: true,
 				themeColor: "#0076d6",
@@ -63,7 +63,7 @@
 		<script src="//cdn.jsdelivr.net/npm/docsify-pagination/dist/docsify-pagination.min.js"></script>
 		<script src="//cdn.jsdelivr.net/npm/docsify-tabs/dist/docsify-tabs.min.js"></script>
 		<script src="https://unpkg.com/@developerportalsg/docsify-plugin-toc@latest/dist/docsify-plugin-toc.min.js"></script>
-		<script src="https://unpkg.com/@developerportalsg/docsify-accordion-plugin@latest/dist/docsify-plugin-accordion.min.js"></script>
+    <script src="https://unpkg.com/@developerportalsg/docsify-accordion-plugin@latest/dist/docsify-plugin-accordion.min.js"></script>
 		<script src="//cdn.jsdelivr.net/npm/@lx0f/docsify-sidebar-collapse@latest/dist/docsify-sidebar-collapse.bundle.js"></script>
 	</body>
 </html>
