--- a/index.html
+++ b/index.html
@@ -1,68 +1,84 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8" />
-		<title>APEX Cloud - Documentation</title>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+  <head>
+    <meta charset="UTF-8" />
+    <title>APEX Cloud - Documentation</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
 
+    <!-- Import for documentation portal styles -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@sg-developer-portal/doc-theme-default@0.0.13/public/dist/doc.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/@developerportalsg/sectionsify-plugin-toc@latest/dist/light.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/@developerportalsg/sectionsify-accordion-plugin@latest/dist/accordion.css"
+    />
+  </head>
+  <body>
+    <div id="app"></div>
 
-		<!-- Import for documentation portal styles -->
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sg-developer-portal/doc-theme-default@0.0.13/public/dist/doc.css" />
-		<link rel="stylesheet" href="https://unpkg.com/@developerportalsg/docsify-plugin-toc@latest/dist/light.css" />
-    <link rel="stylesheet" href="https://unpkg.com/@developerportalsg/docsify-accordion-plugin@latest/dist/accordion.css" />
+    <!-- 1. Import mermaid.js, BEFORE the window.$sectionsify initialisation -->
+    <script src="//cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
 
-  
-	</head>
-	<body>
-		<div id="app"></div>
+    <script>
+      // 2. Add the two lines below before declaring the window.$sectionsify object:
+      var num = 0;
+      mermaid.initialize({ startOnLoad: false });
 
-		<!-- 1. Import mermaid.js, BEFORE the window.$docsify initialisation -->
-		<script src="//cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
-
-		<script>
-			// 2. Add the two lines below before declaring the window.$docsify object:
-			var num = 0;
-			mermaid.initialize({ startOnLoad: false });
-
-			window.$docsify = {
-				name: "APEX Cloud Documentations", // Must configure when publishing
-				hideSidebar: false, // Configurable when publishing
-				basePath: "", // Configurable when publishing
-				homepage: "docs/home.md", // Configurable when publishing
-				el: "#app",
-				auto2top: true,
-				loadSidebar: true,
+      window.$sectionsify = {
+        name: "APEX Cloud Documentations", // Must configure when publishing
+        hideSidebar: false, // Configurable when publishing
+        basePath: "", // Configurable when publishing
+        homepage: "sections/home.md", // Configurable when publishing
+        el: "#app",
+        auto2top: true,
+        loadSidebar: true,
         useSGDSAccordion: true,
-				subMaxLevel: 2, // For automatic 2nd level headings
-				enableSidebarCollapse: true,
-				themeColor: "#0076d6",
-				markdown: {
-					renderer: {
-						code: function (code, lang) {
-							if (lang === "mermaid") {
-								return '<div class="mermaid">' + mermaid.render("mermaid-svg-" + num++, code) + "</div>";
-							}
-							return this.origin.code.apply(this, arguments);
-						},
-					},
-				},
-				toc: {
-					tocMaxLevel: 5,
-					target: "h2, h3, h4, h5, h6",
-					ignoreHeaders: ["<!-- {docsify-ignore} -->", "<!-- {docsify-ignore-all} -->"],
-				},
-			};
-		</script>
+        subMaxLevel: 2, // For automatic 2nd level headings
+        enableSidebarCollapse: true,
+        themeColor: "#0076d6",
+        markdown: {
+          renderer: {
+            code: function (code, lang) {
+              if (lang === "mermaid") {
+                return (
+                  '<div class="mermaid">' +
+                  mermaid.render("mermaid-svg-" + num++, code) +
+                  "</div>"
+                );
+              }
+              return this.origin.code.apply(this, arguments);
+            },
+          },
+        },
+        toc: {
+          tocMaxLevel: 5,
+          target: "h2, h3, h4, h5, h6",
+          ignoreHeaders: [
+            "<!-- {sectionsify-ignore} -->",
+            "<!-- {sectionsify-ignore-all} -->",
+          ],
+        },
+      };
+    </script>
 
-		<!-- Imports for documentation functionality on documentation portal  -->
-		<script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
-		<script src="//cdn.jsdelivr.net/npm/docsify-copy-code"></script>
-		<script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
-		<script src="//cdn.jsdelivr.net/npm/docsify-pagination/dist/docsify-pagination.min.js"></script>
-		<script src="//cdn.jsdelivr.net/npm/docsify-tabs/dist/docsify-tabs.min.js"></script>
-		<script src="https://unpkg.com/@developerportalsg/docsify-plugin-toc@latest/dist/docsify-plugin-toc.min.js"></script>
-    <script src="https://unpkg.com/@developerportalsg/docsify-accordion-plugin@latest/dist/docsify-plugin-accordion.min.js"></script>
-		<script src="//cdn.jsdelivr.net/npm/@lx0f/docsify-sidebar-collapse@latest/dist/docsify-sidebar-collapse.bundle.js"></script>
-	</body>
+    <!-- Imports for documentation functionality on documentation portal  -->
+    <script src="//cdn.jsdelivr.net/npm/sectionsify/lib/sectionsify.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sectionsify-copy-code"></script>
+    <script src="//cdn.jsdelivr.net/npm/sectionsify/lib/plugins/zoom-image.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sectionsify-pagination/dist/sectionsify-pagination.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sectionsify-tabs/dist/sectionsify-tabs.min.js"></script>
+    <script src="https://unpkg.com/@developerportalsg/sectionsify-plugin-toc@latest/dist/sectionsify-plugin-toc.min.js"></script>
+    <script src="https://unpkg.com/@developerportalsg/sectionsify-accordion-plugin@latest/dist/sectionsify-plugin-accordion.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/@lx0f/sectionsify-sidebar-collapse@latest/dist/sectionsify-sidebar-collapse.bundle.js"></script>
+  </body>
 </html>
